feat: upgrade to Java 21 (#166)